welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:4: error: not found: value estSurOrange
while(!estSurOrange()){
       ^